Fixed mobile UI issue Footer content display changed to column flex when displayed on narrower screen Changed grey line pn bookpage to blue line Fixed notepage issue, unfixed -- the scale

--- a/src/page/BookPage.module.css
+++ b/src/page/BookPage.module.css
@@ -21,11 +21,11 @@
     justify-content: center;
     background-color: #1a1a2e;
     width: 100%;
-    padding-bottom: 1000px;
+    padding-bottom: 500px;
     margin-bottom: 0px;
     margin-top: 0px;
     padding-top: 400px;
-    top: 900px;
+    top: 500px;
 
 }
 
@@ -86,8 +86,8 @@
     display: block;
     background-repeat: no-repeat;
     position: relative;
-    top: 900px;
-    margin-top: -400px;
+    top: 500px;
+    margin-top: 0px;
 }
 
 @media screen and (max-width: 1440px) {
@@ -161,6 +161,8 @@
 @media screen and (max-width: 478px){
     .bookWrp{
         transform: translate(0, 3px);
+        padding-top: 200px;
+        padding-bottom: 500px;
     }
 
     .spacer{
