--- a/src/page/LandingPage.module.css
+++ b/src/page/LandingPage.module.css
@@ -55,6 +55,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
 }
 
 .ilus {
