--- a/src/page/NotePage.module.css
+++ b/src/page/NotePage.module.css
@@ -128,6 +128,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    max-width: 100%;
 }
 
 .mainForm {
@@ -304,6 +306,7 @@
     flex-direction: row;
     left: 0;
     margin: 0 50px 0 10px;
+   
 }
 
 .pgCtrl,
@@ -455,7 +458,7 @@
     }
 
     .boardScroller {
-        width: 100%;
+        width: 120vw;
         margin-left: 0;
         margin-right: 0;
 
